<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@android:drawable/ic_menu_today"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/nav_accounts"
        android:icon="@android:drawable/ic_menu_save"
        android:title="@string/nav_accounts" />
    <item
        android:id="@+id/nav_transactions"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="@string/nav_transactions" />
    <item
        android:id="@+id/nav_ai"
        android:icon="@android:drawable/ic_menu_help"
        android:title="@string/nav_ai" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/nav_profile" />
</menu>
